fix gameboard aspect ratio on mobile, move credits to footer and darken background color for better visibility

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ body,
 	padding: 0;
 	overflow-x: hidden;
 	font-family: 'Roboto', sans-serif;
-	background-image: linear-gradient(120deg, #437b93 0%, #d1edfa 100%);
+	background-image: linear-gradient(120deg, #295365 0%, #d1edfa 100%);
 	background-color: no-repeat;
 }
 
@@ -72,31 +72,30 @@ button {
 
 a {
 	color: rgb(99, 99, 99);
+	text-decoration: underline;
+}
+
+a:hover {
+	color: white;
 }
 
 /* GAMEBOARD */
 
 #gameboard-container {
-	/* display: grid;
-	grid-template-columns: 1fr minmax(0, 800px) 1fr;
-	grid-template-rows: 1fr minmax(0, 800px) 1fr; */
 	width: calc(100vw - 16px);
 	height: calc(100vw - 16px);
 	max-width: 800px;
 	max-height: 800px;
 	margin: 0 auto;
 	color: rgba(0, 0, 0, 0.8);
-	background: red;
 }
 
 #gameboard {
-	background: blue;
+	width: 100%;
 	height: 100%;
-	grid-row: 2;
-	grid-column: 2;
 	display: grid;
 	grid-template-columns: repeat(10, 1fr);
-	grid-auto-rows: minmax(40px, 1fr);
+	grid-auto-rows: minmax(0, 1fr);
 	color: rgba(0, 0, 0, 0.8);
 }
 
@@ -335,45 +334,24 @@ a {
 	font-size: 48px;
 }
 
-@media screen and (max-width: 800px) {
-	/* #gameboard-container {
-		height: calc(100vw - 16px);
-		width: calc(100vw - 16px);
-	}
-
-	.modal {
-		max-width: 90%;
-	} */
+.page-container {
+	position: relative;
+	min-height: 100vh;
+	width: 100%;
 }
 
-/* Extra Small Devices, Phones */
-@media only screen and (max-width: 480px) {
-	/* body,
-	html,
-	#root,
-	.end-game-display {
-		width: 200vw;
-		height: 200vh;
-	}
+.footer {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	text-align: center;
+	padding-bottom: 32px;
+	color: white;
+}
 
-	.turn-keeper > h2 {
-		font-size: 2.8rem;
-	}
-
-	.modal {
-		font-size: 2rem;
-		height: 600px;
-	}
-
-	.modal > form > input[type='text'] {
-		font-size: 2rem;
-		padding: 16px 24px;
-	}
-
-	button {
-		font-size: 1.8rem;
-		padding: 14px 22px;
-	} */
+.footer a {
+	color: white;
 }
 
 @media (hover: hover) {
